fix sticky phone button z-index

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -652,7 +652,7 @@ nav a,
 
 	&__phone-button {
 		position: fixed;
-		z-index: 200;
+		z-index: 1010;
 		bottom: 20px;
 		right: 20px;
 	}
